--- a/myteabase/css/style.css
+++ b/myteabase/css/style.css
@@ -3964,57 +3964,29 @@ illustration 9
 .carousel,.item,.active{height:300px;}
 .carousel-inner{height:300px;}
 .fill{width:100%;height:300px;background-position:center;background-size:cover;}
-/*Blog CSS */
 
-.roadmaptext {
-  padding-top: 100px;
-}
-.blog-section {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-}
-.blog-header {
-  margin-bottom: 40px;
-}
-.blog-header h1 {
-  font-size: 2.5rem;
-}
-.blog-cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
-}
-.blog-card {
-  border-radius: 2px;
-  border: #aaa;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  transform: scale(0.95);
-  opacity: 0;
-}
-.blog-card img {
+.usp-section {
+  display: flex;
+  justify-content: space-around;
   width: 100%;
-  height: 200px;
-  object-fit: cover;
+  gap: 4px;
+  max-width: 1200px;
 }
-.blog-card-content {
-  padding: 20px;
+
+.usp-box {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 40px;
+  text-align: center;
+  opacity: 0; /* Start hidden for animation */
 }
-.blog-card-content h3 {
-  font-size: 1.5rem;
-  color: #f8b802;
-  margin: 0 0 10px;
+
+.usp-box h3 {
+  margin-top: 0;
 }
-.blog-card-content p {
-  font-size: 1rem;
-  margin: 0 0 20px;
-}
-.blog-card-content a {
-  text-decoration: none;
-  color: #f8b802;
-  font-weight: bold;
-}
-.blog-card-content a:hover {
-  text-decoration: underline;
+
+.usp-box p {
+
 }
